--- a/GESTION-CURSOS/src/main/resources/templates/admin/usuarios-listado.html
+++ b/GESTION-CURSOS/src/main/resources/templates/admin/usuarios-listado.html
@@ -1,177 +1,89 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>IB | Usuarios</title>
-
-	<!-- Google Font: Source Sans Pro -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-	
-	<!-- Font Awesome Icons -->
-	<link rel="stylesheet" th:href="@{/plugins/fontawesome-free/css/all.min.css}">
-	
-	<!-- Theme style -->
-	<link rel="stylesheet" th:href="@{/dist/css/adminlte.min.css}">
-</head>
+<head th:replace="fragments/head::head ('Usuarios')" />
 
 <body class="hold-transition sidebar-mini">
 	<div class="wrapper">
 		
   		<!-- Navbar -->
-  		<nav class="main-header navbar navbar-expand navbar-white navbar-light">
-	    <!-- Left navbar links -->
-		<ul class="navbar-nav">
-	      <li class="nav-item">
-	        <a class="nav-link" data-widget="pushmenu" href="#" role="button">
-	          <i class="fas fa-bars"></i>
-	        </a>
-	      </li>
-	      <li class="nav-item d-none d-sm-inline-block">
-	        <a href="index3.html" class="nav-link">Administradores</a>
-	      </li>
-	      <li class="nav-item d-none d-sm-inline-block">
-	        <a href="#" class="nav-link">Profesores</a>
-	      </li>
-	      <li class="nav-item d-none d-sm-inline-block">
-	        <a href="#" class="nav-link">Estudiantes</a>
-	      </li>
-	    </ul>
-		</nav>
-		<!-- /.navbar -->
+  		<div th:replace="fragments/navbar :: main-navbar"></div>
 		
-  		<!-- Main Sidebar Container -->
-		<aside class="main-sidebar sidebar-dark-primary elevation-4">
+		<!-- Main Sidebar Container -->
+		<div th:replace="fragments/aside :: aside"></div>
 		
-    		<!-- Brand Logo -->
-    		<a href="index3.html" class="brand-link">
-      			<img th:src="@{/images/logo.png}" alt="Instituto Belgrano" class="brand-image img-circle elevation-3" style="opacity: .8">
-      			<span class="brand-text font-weight-light">Instituto Belgrano</span>
-    		</a>
-
-    <!-- Sidebar -->
-    <div class="sidebar">
+		<!-- Content Wrapper. Contains page content -->
+		<div class="content-wrapper">
+			<section class="content-header">
+				<div class="container-fluid">
+					<div class="row mb-2">
+						<div class="col-sm-6">
+							<h1 class="m-0 text-dark">Usuarios</h1>
+          				</div>
+          				<!-- /.col -->
+          				
+          				<div class="col-sm-6">
+            				<ol class="breadcrumb float-sm-right">
+              					<li class="breadcrumb-item"><a href="#">Home</a></li>
+              					<li class="breadcrumb-item active">Usuarios</li>
+            				</ol>
+          				</div>
+          				<!-- /.col -->
+        			</div>
+        			<!-- /.row -->
+      			</div>
+	      		<!-- /.container-fluid -->
+  			</section>
       
-      <!-- SidebarSearch Form -->
-      <div class="form-inline invisible">
-        <div class="input-group" data-widget="sidebar-search">
-          <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
-          <div class="input-group-append">
-            <button class="btn btn-sidebar">
-              <i class="fas fa-search fa-fw"></i>
-            </button>
-          </div>
-        </div>
-      </div>
-
-      <!-- Sidebar Menu -->
-      <nav class="mt-2">
-        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-          
-			<li class="nav-item">
-              <a href="/docs/3.0/index.html" class="nav-link active">
-                <i class="nav-icon fas fa-users"></i>
-                Usuarios
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="/docs/3.0/index.html" class="nav-link">
-                <i class="nav-icon fas fa-chalkboard-teacher"></i>
-                Profesores
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="/docs/3.0/index.html" class="nav-link">
-                <i class="nav-icon fas fa-book-open"></i>
-                Cursos
-              </a>
-            </li>
-            
-        </ul>
-      </nav>
-      <!-- /.sidebar-menu -->
-    </div>
-    <!-- /.sidebar -->
-  </aside>
-
-  <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-  	<section class="content-header">
-  	<div class="container-fluid">
-        <div class="row mb-2">
-          <div class="col-sm-6">
-            <h1 class="m-0 text-dark">Usuarios</h1>
-          </div><!-- /.col -->
-          <div class="col-sm-6">
-            <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">Usuarios</li>
-            </ol>
-          </div>
-          <!-- /.col -->
-        </div>
-        <!-- /.row -->
-        
-      </div>
-  	</section>
-      <!-- /.container-fluid -->
-      
-      <section class="content-header">
-  	<div class="container-fluid">
-        <div class="row mb-2">
-          <div class="col-sm-12">
+      		<!-- Seccion tabla LISTA DE USUARIOS -->
+      		<section class="content-header">
+  				<div class="container-fluid">
+        			<div class="row mb-2">
+          				<div class="col-sm-12">
          
-         <div class="card">
-              <div class="card-header">
-                <h3 class="card-title">Listado de Usuarios del Sistema</h3>
-              </div>
-              <!-- /.card-header -->
-              <div class="card-body">
-                <table class="table table-bordered">
-                  <thead>
-                    <tr>
-                      <th style="width: 10px">#</th>
-                      <th>Nombre de usuario</th>
-                      <th>Nombre y Apellido</th>
-                      <th>Email</th>
-                      <th style="width: 40px">Acciones</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>[id]</td>
-                      <td>[nombre de usuario]</td>
-                      <td>[nombre y apellido]</td>
-                      <td>[email]</td>
-                      <td>[acciones]</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <!-- /.card-body -->
-              
-            </div>
+         					<div class="card">
+              					<div class="card-header">
+                					<h3 class="card-title">Listado de Usuarios del Sistema</h3>
+              					</div>
+              					<!-- /.card-header -->
+              					
+              					<div class="card-body">
+                					<table class="table table-bordered">
+                  						<thead>
+                    						<tr>
+                      							<th style="width: 10px">#</th>
+                      							<th>Nombre de usuario</th>
+                      							<th>Nombre y Apellido</th>
+                      							<th>Email</th>
+                      							<th>Roles</th>
+                      							<th style="width: 40px">Acciones</th>
+                    						</tr>
+                  						</thead>
+                  						<tbody>
+                    						<tr>
+												<td>[id]</td>
+												<td>[nombre de usuario]</td>
+												<td>[nombre y apellido]</td>
+												<td>[email]</td>
+												<td>[roles]</td>
+												<td>[acciones]</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+								<!-- /.card-body -->
+							</div>
          
-         
-          </div>
-         </div>
-      </div>
-  	</section>
-  </div>
-  
-  
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- /. Seccion tabla LISTA DE USUARIOS -->
+		</div>
   
 	</div>
 	
-	
 	<!-- REQUIRED SCRIPTS -->
-
-	<!-- jQuery -->
-	<script th:src="@{/plugins/jquery/jquery.min.js}"></script>
-	<!-- Bootstrap 4 -->
-	<script th:src="@{/plugins/bootstrap/js/bootstrap.bundle.min.js}"></script>
-	<!-- AdminLTE App -->
-	<script th:src="@{/dist/js/adminlte.min.js}"></script>
-
+	<div th:replace="fragments/jscripts::required-js"></div>
+	
 </body>
 </html>
