Alta de usuarios

--- a/GESTION-CURSOS/src/main/resources/templates/admin/usuarios-listado.html
+++ b/GESTION-CURSOS/src/main/resources/templates/admin/usuarios-listado.html
@@ -52,7 +52,7 @@
 						<!-- /.card-body -->
 						
 						<div class="card-footer text-muted">
-							<a class="btn btn-info float-right" href="#" role="button">
+							<a class="btn btn-info float-right" th:href="@{/admin/usuarios/frm}" role="button">
 								<i class="nav-icon fas fa-user-plus"></i>
 								Nuevo Usuario
 							</a>
