--- a/GESTION-CURSOS/src/main/resources/templates/fragments/navbar.html
+++ b/GESTION-CURSOS/src/main/resources/templates/fragments/navbar.html
@@ -15,7 +15,7 @@
 					</a>
 				</li>
 				<li class="nav-item d-none d-sm-inline-block">
-					<a href="index3.html" class="nav-link">Administradores</a>
+					<a href="index3.html" class="nav-link active">Administradores</a>
 				</li>
 				<li class="nav-item d-none d-sm-inline-block">
 					<a href="#" class="nav-link">Profesores</a>
