--- a/GESTION-CURSOS/src/main/resources/templates/admin/usuarios-crear.html
+++ b/GESTION-CURSOS/src/main/resources/templates/admin/usuarios-crear.html
@@ -11,7 +11,7 @@
 				<div class="col-sm-1"></div>
 				<div class="col-sm-10">
        
-       				<form name="form" method="post" th:object="${usuarioFrm}">
+       				<form name="form" method="post" th:object="${usuarioFrm}" autocomplete="off">
 	       				<div class="card card-info">
 							<div class="card-header">
 								<h3 class="card-title">Alta de USUARIO</h3>
@@ -26,14 +26,20 @@
 			              					<div class="form-group">
 			              						<label for="username">Username</label>
 			              						<input type="text" class="form-control" id="username" placeholder="Username" autofocus="autofocus"
-			              							th:field="*{username}" th:value="*{username}">
+			              							th:field="*{username}" th:value="*{username}" th:errorclass="is-invalid">
+		              							<span id="username-error" class="error invalid-feedback" 
+		              								th:if="${#fields.hasErrors('username')}"
+		              								th:each="err : ${#fields.errors('username')}" th:text="${err}"></span>
 		              						</div>
 			              				</div>
 			              				<div class="col-sm-6">
 			              					<div class="form-group">
 			              						<label for="password">Password</label>
 			              						<input type="password" class="form-control" id="password" placeholder="Password"
-			              							th:field="*{password}" th:value="*{password}">
+			              							th:field="*{password}" th:value="*{password}" th:errorclass="is-invalid">
+		              							<span id="password-error" class="error invalid-feedback" 
+		              								th:if="${#fields.hasErrors('password')}"
+		              								th:each="err : ${#fields.errors('password')}" th:text="${err}"></span>
 		              						</div>
 			              				</div>
 			              			</div>
@@ -44,15 +50,21 @@
 			              				<div class="col-sm-6">
 			              					<div class="form-group">
 			              						<label for="nombres">Nombres</label>
-			              						<input type="text" class="form-control" id="nombres" placeholder="Nombres"
-			              							th:field="*{nombres}" th:value="*{nombres}">
+			              						<input type="text" class="form-control text-uppercase" id="nombres" placeholder="Nombres"
+			              							th:field="*{nombres}" th:value="*{nombres}" th:errorclass="is-invalid">
+		              							<span id="nombres-error" class="error invalid-feedback" 
+		              								th:if="${#fields.hasErrors('nombres')}"
+		              								th:each="err : ${#fields.errors('nombres')}" th:text="${err}"></span>
 		              						</div>
 			              				</div>
 			              				<div class="col-sm-6">
 			              					<div class="form-group">
 			              						<label for="apellidos">Apellidos</label>
-			              						<input type="text" class="form-control" id="apellidos" placeholder="Apellidos"
-			              							th:field="*{apellidos}" th:value="*{apellidos}">
+			              						<input type="text" class="form-control text-uppercase" id="apellidos" placeholder="Apellidos"
+			              							th:field="*{apellidos}" th:value="*{apellidos}" th:errorclass="is-invalid">
+		              							<span id="apellidos-error" class="error invalid-feedback" 
+		              								th:if="${#fields.hasErrors('apellidos')}"
+		              								th:each="err : ${#fields.errors('apellidos')}" th:text="${err}"></span>
 		              						</div>
 			              				</div>
 			              			</div>
@@ -63,8 +75,11 @@
 			              				<div class="col-sm-6">
 			              					<div class="form-group">
 			              						<label for="email">Email</label>
-			              						<input type="email" class="form-control" id="email" placeholder="Email"
-		              								th:field="*{email}" th:value="*{email}">
+			              						<input type="email" class="form-control text-lowercase" id="email" placeholder="Email"
+		              								th:field="*{email}" th:value="*{email}" th:errorclass="is-invalid">
+	              								<span id="email-error" class="error invalid-feedback" 
+		              								th:if="${#fields.hasErrors('email')}"
+		              								th:each="err : ${#fields.errors('email')}" th:text="${err}"></span>
 		              						</div>
 			              				</div>
 			              				<div class="col-sm-6">
@@ -84,6 +99,9 @@
 						                                th:field="*{roles}" th:value="'ESTUDIANTE'">
 						                          <label for="rol3" class="custom-control-label">ESTUDIANTE</label>
 						                        </div>
+						                        <span id="roles-error" class="error invalid-feedback" style="display: inline;"
+		              								th:if="${#fields.hasErrors('roles')}"
+		              								th:each="err : ${#fields.errors('roles')}" th:text="${err}"></span>
 						                      </div>
 			              				</div>
 			              			</div>
