--- a/GESTION-CURSOS/src/main/resources/templates/admin/usuarios-listar.html
+++ b/GESTION-CURSOS/src/main/resources/templates/admin/usuarios-listar.html
@@ -40,7 +40,9 @@
 										
 										<td>
 											<div class="btn-group">
-						                        <button type="button" class="btn btn-default"><i class="nav-icon fas fa-edit"></i></button>
+						                        <a class="btn btn-default" th:href="@{'/admin/usuarios/' + ${usuario.id} + '/frm'}" role="button">
+													<i class="nav-icon fas fa-edit"></i>
+												</a>
 												<button type="button" class="btn btn-danger"><i class="nav-icon fas fa-trash-alt"></i></button>
 											</div>
 										</td>
