--- a/GESTION-CURSOS/src/main/resources/templates/fragments/navbar.html
+++ b/GESTION-CURSOS/src/main/resources/templates/fragments/navbar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="es">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5" lang="es">
 	<head>
 		<meta charset="UTF-8">
 	</head>
@@ -14,18 +14,25 @@
 						<i class="fas fa-bars"></i>
 					</a>
 				</li>
-				<li class="nav-item d-none d-sm-inline-block">
+				<li class="nav-item d-none d-sm-inline-block" sec:authorize="hasRole('ADMINISTRADOR')">
 					<a href="index3.html" class="nav-link active">Administradores</a>
 				</li>
-				<li class="nav-item d-none d-sm-inline-block">
+				<li class="nav-item d-none d-sm-inline-block" sec:authorize="hasRole('PROFESOR')">
 					<a href="#" class="nav-link">Profesores</a>
 				</li>
-				<li class="nav-item d-none d-sm-inline-block">
+				<li class="nav-item d-none d-sm-inline-block" sec:authorize="hasRole('ESTUDIANTE')">
 					<a href="#" class="nav-link">Estudiantes</a>
 				</li>
 			</ul>
 			
 			<ul class="navbar-nav ml-auto">
+				<li class="nav-item">
+					<div class="user-panel">
+				        <div class="info">
+				          <a href="#" class="d-block" sec:authentication="name">Alexander Pierce</a>
+				        </div>
+					</div>
+				</li>
 				<li class="nav-item">
 					<a class="nav-link" th:href="@{/logout}" role="button">
 						<i class="fas fa-sign-out-alt"></i>
